User can add and remove subreddits to/from list.

--- a/reddit_reader.html
+++ b/reddit_reader.html
@@ -15,6 +15,7 @@
 
   <form>
     <input type="text" id="subreddit">
+    <button type="button" id="add-subreddit">Add</button>
   </form>
 
   <div>
